--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,25 @@
 body {
-  color: #ffffff;
+  color: #fff;
   background: seagreen;
   font-family: arial, sans-serif;
   padding: 10px;
+}
+
+h1 {
+  cursor: pointer;
+}
+
+footer {
+  position: fixed;
+  bottom: 10px;
+  right: 15px;
+  opacity: 0.7;
+}
+
+#rect {
+  color: #000;
+  background: rgba(0, 0, 0, .3);
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
 }
